<resources>
    <string name="app_name">VisitWaterford</string>
    <string name="action_settings">Settings</string>
    <string name="homeTitle">Welcome to Waterford</string>
    <string name="homeSubtitle">Please use the navigation bar to navigate the App, So you can Rate and see the Hot Spot locations to see in Waterford </string>
    <string name="menuPlaces">Places</string>
    <string name="menuHome">Home</string>
    <string name="title_activity_place">place</string>
    <string name="placeTitle">Places</string>
    <string name="menuRatings">Ratings</string>
    <string name="ratingsTitle">Welcome to Ratings!</string>
    <string name="loginName">Name</string>
    <string name="loginButton">Login</string>
    <string name="incoreectAttempts">Number of Attempts Remaining:</string>
    <string name="loginTitle">Login</string>
    <string name="registerButton">New User? Sign Up!</string>
    <string name="regButton">Register</string>
    <string name="alreadySignedInButton">Already Signed In? Return To Login</string>
    <string name="donateTitle">Waterford Tourism Contribution</string>
    <string name="donateSubTitle">All Donations are to fund further tourism in Waterford City, so donate what you feel your experience was worth!</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="title_activity_donate">Donate</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="loginDetails">Username: admin</string>
    <string name="passwordText">Password:1234</string>
    <string name="WaterfordCrystalTitle">Waterford Crystal</string>
    <string name="crystalSubmit">Submit</string>
    <string name="crystalText">From your time at Waterford Crystal Rate your experience out 5!</string>
    <string name="crystalRatingText" />
    <string name="towerTitle">Reginald\'s Tower</string>
    <string name="towerText">From your time at Reginal Tower Rate your experience out 5!</string>
    <string name="towerRatingText" />
    <string name="towerSubmit">Submit</string>
    <string name="title_activity_hot_spots">Map</string>
    <string name="loadingText">Loading Visit Waterford...</string>
    <string name="greenwayTitle">Waterford Greenway</string>
    <string name="greenwayText">From your time at the Greenway Rate your experience out 5!</string>
    <string name="greenwaySubmit">Submit</string>
    <string name="greenwayRatingText" />
    <string name="museumTitle">Medieval Museum</string>
    <string name="museumText">From your time at the Medieval Museum Rate your experience out 5!</string>
    <string name="museumRatingText" />
    <string name="palaceTitle">Bishops Palace</string>
    <string name="palaceTitle1">From your time at Bishops Palace Rate your experience out 5!</string>
    <string name="palaceRatingText" />
    <string name="cameraTitle">Camera</string>
    <string name="cameraText">Take a picture of your adventures below by clicking on TAKE PICTURE.</string>
    <string name="amount">Amount</string>
    <string name="totalSoFar">$ Total</string>
    <string name="total">Total so Far</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="btnComment">Add Comment</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="journalText">Enter your comments on your experiences in Waterford and add your personal notes to your journal.</string>
    <string name="deleteHeading">Journal Delete/Update</string>
    <string name="journalTitle">Journal</string>
    <string name="registrationTitle">Registration</string>
    <string name="journalEntries">Journal Entries</string>
    <string name="journalEntriesText">Select your comments from the list below to edit your comment.</string>
    <string name="ratingsListTitle">Select from the list below to view and rate the locations you visted in Waterford</string>
    <string name="ratingsTitlePage">Ratings</string>


</resources>
