<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editable_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_below="@+id/editable_item">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnDelete" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/btnDelete"
            android:text="@string/btnSave" />


    </LinearLayout>

    <TextView
        android:id="@+id/deleteHeading"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/imprima"
        android:text="@string/deleteHeading"
        android:textAlignment="center"
        android:textColor="#9F59CC"
        android:textSize="30sp" />

</RelativeLayout>