<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ie.app.activities.Journal">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="348dp"
        android:layout_height="161dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="178dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="368dp"
        android:layout_height="94dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="0dp">

        <Button
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginBottom="53dp"
            android:text="@string/btnComment" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="210dp"
            android:layout_marginLeft="73dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="53dp"
            android:layout_toRightOf="@+id/btnComment"
            android:text="View Data" />
    </RelativeLayout>

    <TextView
        android:id="@+id/journalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="73dp"
        android:text="@string/journalText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/journalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/imprima"
        android:text="@string/journalTitle"
        android:textColor="#9F59CC"
        android:textSize="30sp" />
</RelativeLayout>